name:                json-assertions
version:             0.1.0.0
synopsis:            Test that your (Aeson) JSON encoding matches your expectations
-- description:         
homepage:            http://github.com/ocharles/json-assertions.git
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Test.JSON.Assertions
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >= 4.5 && < 5,
    indexed >= 0.1,
    indexed-free >= 0.3,
    aeson >= 0.6,
    lens-aeson >= 0.1.2,
    lens >= 3.10,
    text >= 0.11.3.1
  hs-source-dirs:      src
  default-language:    Haskell2010